@@ -11,4 +11,4 @@ javadir = $(datadir)/java
 java_JAVA = a.java b.java c.java
 END
 
-$AUTOMAKE || exit 1
+$AUTOMAKE
