@@ -1,3 +1,7 @@
+Fri Mar 20 00:32:16 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* javasubst.test: New file.
+
 Thu Mar 19 14:11:45 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* javaprim.test: New file.
